--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>
 	<header>
-		<h2>Поиск поэзии</h2>
+		<h2>Поиск поэзии по образу и подобию</h2>
 	</header>
 
 	<div class="request-bar">
-		<p class="help">Опишите на что должен быть похож стих который вы хотите найти, можете указать желаемого автора, объем или эпоху.</p>
+		<p class="help">Опишите на что должно быть похоже стихотворение, который вы хотите найти, можете указать следующие <font style="font-style: italic;">характеристики</font>: желаемого автора, объем или эпоху.</p>
 		<textarea id="prompt" placeholder="Запрос..."></textarea>
 		<div class="formm">
 			<p> <strong>Приоритет поиска: </strong> <font style="font-style: italic; font-size: 15px;">образность
@@ -56,7 +56,7 @@ function html_poem_template(name, text, year, author) {
 }
 
 $('#search').on("click", function() {
-	var serverUrl = "https://9483-91-135-222-29.ngrok-free.app/poem_request";
+	var serverUrl = "https://1f98-91-135-222-29.ngrok-free.app/poem_request";
 	//var serverUrl = "https://127.0.0.1:8080/poem_request";
 	$('#result').fadeOut('slow')
 
@@ -67,8 +67,8 @@ $('#search').on("click", function() {
 		contentType: "application/json",  
 		data: JSON.stringify({ 
 			request_text: $('#prompt').val(), 
-			top_n: 10, 
-			search_priority: 1-$('#priority').val()/100
+			top_n: 33, 
+			search_priority: 0.05 + (1-$('#priority').val()/100)*0.9
 		}),  
 		success: function(response) {
 			console.log(response)
