--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function html_poem_template(name, text, year, author) {
 	return res
 }
 
-var serverUrl = "https://ef3c-91-135-222-29.ngrok-free.app/poem_request";
+var serverUrl = "https://c112-91-135-222-29.ngrok-free.app/poem_request";
 // var serverUrl = "https://127.0.0.1:8080/poem_request";
 
 var prev_req = ''
